@@ -1,3 +1,6 @@
+2010-02-18  6.5.9-7 Anthony Thyssen <A.Thyssen@griffith...>
+  * Finialized -set option:convolve:scale  kernel normalize/scale option
+
 2010-02-16  6.5.9-7 Cristy  <quetzlzacatenango@image...>
   * TransformImage() resets the image blob when called in the PICT decoder;
     use SetImageExtent() instead.
